# ChangeLog for dev-perl/Perl6-Junction
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl6-Junction/ChangeLog,v 1.8 2013/09/03 05:32:08 patrick Exp $

*Perl6-Junction-1.600.0 (03 Sep 2013)

  03 Sep 2013; Patrick Lauer <patrick@gentoo.org>
  +Perl6-Junction-1.600.0.ebuild:
  Bump

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Perl6-Junction-1.400.0.ebuild:
  Cleanup

*Perl6-Junction-1.500.0 (13 Sep 2012)

  13 Sep 2012; Torsten Veller <tove@gentoo.org> +Perl6-Junction-1.500.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Perl6-Junction-1.400.0 (26 Feb 2011)

  26 Feb 2011; Torsten Veller <tove@gentoo.org> +Perl6-Junction-1.400.0.ebuild,
  -Perl6-Junction-1.40000.ebuild:
  Change version scheme. Looks like a downgrade

  13 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  Perl6-Junction-1.40000.ebuild:
  Marked ~ppc/~ppc64 for bug #315789.

  08 May 2010; Raúl Porcel <armin76@gentoo.org>
  Perl6-Junction-1.40000.ebuild:
  Add ~alpha/~ia64/~sparc wrt #315789

*Perl6-Junction-1.40000 (17 Apr 2010)

  17 Apr 2010; Torsten Veller <tove@gentoo.org>
  +Perl6-Junction-1.40000.ebuild, +metadata.xml:
  Import from perl-experimental