@@ -1,17 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl6-Junction/Perl6-Junction-1.500.0.ebuild,v 1.1 2012/09/13 18:47:47 tove Exp $
-
-EAPI=4
-
-MODULE_AUTHOR=CFRANKS
-MODULE_VERSION=1.50000
-inherit perl-module
-
-DESCRIPTION="Perl6 style Junction operators in Perl5"
-
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE=""
-
-SRC_TEST=do
