@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl6-Junction/Perl6-Junction-1.600.0.ebuild,v 1.1 2013/09/03 05:32:08 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl6-Junction/Perl6-Junction-1.600.0.ebuild,v 1.2 2014/07/25 17:16:19 zlogene Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=CFRANKS
 MODULE_VERSION=1.60000
