@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Perl6-Junction
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl6-Junction/ChangeLog,v 1.8 2013/09/03 05:32:08 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl6-Junction/ChangeLog,v 1.9 2014/07/25 17:16:19 zlogene Exp $
+
+  25 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
+  -Perl6-Junction-1.500.0.ebuild, Perl6-Junction-1.600.0.ebuild:
+  Bump to EAPI=5; Drop old.
 
 *Perl6-Junction-1.600.0 (03 Sep 2013)
 
